@@ -12,6 +12,7 @@ Changelog for 1.3.19
 * Fixed error editing non-existent localized template (Chris T, 3531738)
 * Fixed show/hide logic on nav bar on Contacts screen (Chris T)
 * Fixed "Post as Shown" button not showing properly on AR/AP drafts (Chris T)
+* Added fs_cssdir config option for easier packaging (Chris T, h/t Robert C)
 
 Changelog for 1.3.18
 * Fixed missing template for CSV pricelists (Chris T)
